fix: ls5-swagger
